# zentinel-agent-image-optimization

./: Cargo.toml  README.md  zentinel-agent.toml  zentinel-image-optimization-agent.service
.github/workflows/: ci.yml  release.yml
config/: default.json
src/: buffer.rs  config.rs  errors.rs  handler.rs  lib.rs  main.rs  negotiation.rs
src/cache/: filesystem.rs  key.rs  mod.rs
src/converter/: avif.rs  mod.rs  webp.rs
tests/: e2e-integration.sh  e2e.rs
